--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <div class="stans-styles">
                 <h3>Github isn't easy!</h3>
             </div>
+            <h1>Hello there!</h1>
         </section>
     </main>
 </body>
